Add collapsible hand controls and per-round thirteen-card server workflow